--- a/app/src/main/res/layout/row_movie.xml
+++ b/app/src/main/res/layout/row_movie.xml
@@ -34,8 +34,22 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="30dp"
                 android:layout_marginTop="30dp"
+                android:layout_marginEnd="182dp"
+                android:lines="1"
+                android:textAlignment="viewStart"
                 android:textSize="25sp"
+                app:layout_constraintEnd_toStartOf="@+id/add_to_list_button"
                 app:layout_constraintStart_toEndOf="@+id/movie_poster"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/add_to_list_button"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="30dp"
+                android:layout_marginEnd="8dp"
+                android:text="@string/add_to_movie_list"
+                app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
