--- a/app/src/main/res/layout/row_movie.xml
+++ b/app/src/main/res/layout/row_movie.xml
@@ -30,15 +30,18 @@
 
             <TextView
                 android:id="@+id/movie_title"
-                android:layout_width="wrap_content"
+                android:layout_width="175dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="30dp"
+                android:layout_marginStart="16dp"
                 android:layout_marginTop="30dp"
-                android:layout_marginEnd="182dp"
                 android:lines="1"
+                android:maxLines="2"
                 android:textAlignment="viewStart"
                 android:textSize="25sp"
-                app:layout_constraintEnd_toStartOf="@+id/add_to_list_button"
+                app:autoSizeMaxTextSize="25sp"
+                app:autoSizeMinTextSize="14sp"
+                app:autoSizeStepGranularity="1sp"
+                app:autoSizeTextType="uniform"
                 app:layout_constraintStart_toEndOf="@+id/movie_poster"
                 app:layout_constraintTop_toTopOf="parent" />
 
