--- a/app/src/main/res/menu/navigation.xml
+++ b/app/src/main/res/menu/navigation.xml
@@ -4,12 +4,12 @@
     <item
         android:id="@+id/navigation_search"
         android:text="@string/navigation_search_text"
-        android:title="Search" />
+        android:title="@string/navigation_search_text" />
 
     <item
         android:id="@+id/navigation_list"
         android:text="@string/navigation_list_text"
-        android:title="List" />
+        android:title="@string/navigation_list_text" />
 
 
 </menu>
